Added MIT License

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
 	"name": "germania-kg/retailers",
 
-	"license": "proprietary",
+	"license": "MIT",
+
 	"authors": [
 		{
 			"name": "Carsten Witt",
