Added package description

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
 	"name": "germania-kg/retailers",
+	"description": "Work with Retailers: Interfaces, Traits, FilterIterator",
 
 	"license": "MIT",
 
