--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
 	"require": {
 	},
 	"require-dev": {
-		"satooshi/php-coveralls": "^1.0",
-		"phpunit/phpunit": "^5.5"
+		"php-coveralls/php-coveralls": "^2.0",
+		"phpunit/phpunit": "^5.7|^6.0"
 	}
 }
